[package]
name = "smrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.14"
byteorder = "1.3"
remove_dir_all = "=0.5.0"

[lib]
name = "solana_bpf_upload"
crate-type = ["cdylib", "lib"]
